Añadido el atributo fechaNacimiento a los usuarios
